Build Secure Microservices with Angular & Spring Boot

--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -52,7 +52,7 @@ spring:
   r2dbc:
     url: r2dbc:mysql://localhost:3306/jHipsterMs?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&createDatabaseIfNotExist=true
     username: root
-    password:
+    password: root
   thymeleaf:
     cache: false
 
